[metadata]
name = geofiles

[options]
packages = find:

[options.packages.find]
where = src

[mypy]
# Enable the --strict flags manually, since --strict cannot be used from a
# configuration file.

# We cannot enable "disallow_subclassing_any", since that would prevent us
# from subclassing untyped third-party classes.
# disallow_subclassing_any = True

# We cannot enable "disallow_untyped_decorators", since that would prevent us
# from using untyped decorators of external libraries. One example of such an
# untyped decorator is pytest's @pytest.mark.parametrize, which we definitely
# don't want to give up.
# disallow_untyped_decorators = True

disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_optional = True
no_implicit_reexport = True
check_untyped_defs = True

# Allow importing of libraries that don't use type annotations.
ignore_missing_imports = True
